# Docker_2026

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  init.sql  pyproject.toml
app/: db.py  main.py  rag.py
app/static/: index.html
docs/: docker-ai-guide.md
tests/: test_rag.py
