[project]
name = "docker-ai-demo"
version = "0.1.0"
description = "Local RAG Q&A stack — FastAPI + pgvector + Docker Model Runner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]
